Avoid full recompilations caused by build timestamp updates.
Rationale
---------

Every build had to recompile all the `*.cpp` sources that include the `config.hpp` header
because CMake regenerated the file with the current timestamp on every build.

Course of action
----------------

`gatb/system/api/config.hpp.in` is split in two files:
 * `config.hpp.in` holds kmer sizes, c++ capabilities, etc
 * `build_info.hpp.in` holds version and build information, including the time stamps

`src/CMakeLists.txt` is modified to generate separately the two `.hpp` files.

Then, the uses of the macros defined in build_info.hpp are moved from `SystemInfoCommon.hpp`
to `SystemInfoCommon.cpp`, such that only this compilation unit depends on the `build_info.hpp`
header.

Result
------

Timestamp updates only trigger the compilation of `SystemInfoCommon.cpp`.

--- a/gatb-core/src/CMakeLists.txt
+++ b/gatb-core/src/CMakeLists.txt
@@ -45,7 +45,12 @@ MESSAGE ("-- OPTIMIZED KMER SIZES INTERVALS ARE " ${KSIZE_STRING_SPACE} " <-- ma
 
 # We build the file holding system information
 configure_file (
-    ${PROJECT_SOURCE_DIR}/src/gatb/system/api/config.hpp.in 
+    ${PROJECT_SOURCE_DIR}/src/gatb/system/api/build_info.hpp.in
+    ${PROJECT_BINARY_DIR}/include/gatb/system/api/build_info.hpp
+)
+# File holding configuration macros
+configure_file (
+    ${PROJECT_SOURCE_DIR}/src/gatb/system/api/config.hpp.in
     ${PROJECT_BINARY_DIR}/include/gatb/system/api/config.hpp
 )
 
