--- a/gatb-core/src/gatb/system/api/build_info.hpp.in
+++ b/gatb-core/src/gatb/system/api/build_info.hpp.in
@@ -17,18 +17,11 @@
  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *****************************************************************************/
 
-#define INT128_FOUND            ${INT128_FOUND}
-
-#define KSIZE_LIST    ${KSIZE_STRING_COMMA}
-#define KSIZE_STRING "${KSIZE_STRING_SPACE}"
-
-#define KSIZE_LIST_TYPE  ${KSIZE_STRING_TYPE}
-
-#ifdef GATB_USE_CUSTOM_ALLOCATOR
-    #define CUSTOM_MEM_ALLOC  1
-#else
-    #define CUSTOM_MEM_ALLOC  0
-#endif
-
-#define GATB_HDF5_NB_ITEMS_PER_BLOCK (4*1024)
-#define GATB_HDF5_CLEANUP_WORKAROUND 4
+/* WARNING:
+ * Every source file including this header will be recompiled unconditionally
+ */
+#define STR_LIBRARY_VERSION     "${gatb-core-version}"
+#define STR_COMPILATION_DATE    "${gatb-core-date}"
+#define STR_COMPILATION_FLAGS   "${gatb-core-flags}"
+#define STR_COMPILER            "${CMAKE_C_COMPILER}  (${CMAKE_CXX_COMPILER_VERSION})"
+#define STR_OPERATING_SYSTEM    "${CMAKE_SYSTEM}"
