--- a/gatb-core/docker/Dockerfile.clang
+++ b/gatb-core/docker/Dockerfile.clang
@@ -110,58 +110,62 @@
 #     Base commands
 #
 #     We use a Debian 8 (Jessie) Linux
+#
 FROM debian:jessie
 
 # who to blame?
 MAINTAINER Patrick Durand patrick.durand@inria.fr
 
 # ###
-#     Package installation
+#    Configuring gcc and cmake release
 #
-# install latest packages of the base system
-# as well as packages required to compile GATB-Core
-# Note: software-properties-common contains add-apt-repository, used to install 
-#       clang
-RUN apt-get update && apt-get -y dist-upgrade \
-    && apt-get install -y --no-install-recommends software-properties-common vim git wget make zlib1g-dev libcppunit-dev
+ENV CLANG_VERSION=3.6 \
+    CMAKE_SERIES=3.1 \
+    CMAKE_VERSION=3.1.3
 
 # ###
-#    Configuring gcc and cmake release
-ENV CLANG_VERSION=3.6
-ENV CMAKE_SERIES=3.1
-ENV CMAKE_VERSION=3.1.3
+#     Package installation and configuration
+#
+#     install latest packages of the base system
+#     as well as packages required to compile GATB-Core
+#     Note: 'software-properties-commo'n contains 'add-apt-repository' tool.
+#           It is required to to install clang/llvm.
+#
+RUN apt-get update && apt-get -y dist-upgrade \
+    && apt-get install -y --no-install-recommends software-properties-common vim git wget make zlib1g-dev libcppunit-dev \
+    && apt-get clean \
+    && git config --global http.sslVerify false
 
 # ###
 #     Compiler installation
 #
-# We need a clang/llvm compiler in an appropriate release
-# Reference: http://apt.llvm.org/
-RUN add-apt-repository "deb http://apt.llvm.org/jessie/ llvm-toolchain-jessie-${CLANG_VERSION} main"
-RUN wget -O - http://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
-RUN apt-get update
-RUN apt-get install -y --no-install-recommends clang-${CLANG_VERSION} lldb-${CLANG_VERSION}
+#     We need a clang/llvm compiler in an appropriate release.
+#     Reference: http://apt.llvm.org/
+#
+RUN add-apt-repository "deb http://apt.llvm.org/jessie/ llvm-toolchain-jessie-${CLANG_VERSION} main" \
+    && wget -O - http://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends clang-${CLANG_VERSION} lldb-${CLANG_VERSION} \
+    && apt-get clean
 
 # ###
 #     CMAKE installation
 #
-#     and we need cmake; we do not use: apt-get install cmake
-#     since we have to control which version we use.
+#     we need cmake in aparticular release; we do not use: apt-get 
+#     install cmake since we have to control which version we use.
 #     Cmake install procedure: https://cmake.org/install/
-ENV CMAKE_URL http://cmake.org/files/v${CMAKE_SERIES}/cmake-${CMAKE_VERSION}.tar.gz
-WORKDIR /opt
-RUN wget --no-check-certificate ${CMAKE_URL} -O - | tar xzf -
-WORKDIR cmake-${CMAKE_VERSION}
-ENV CC /usr/bin/clang-${CLANG_VERSION}
-ENV CXX /usr/bin/clang++-${CLANG_VERSION}
-RUN ./bootstrap && make && make install && cd .. && rm -rf cmake-${CMAKE_VERSION}
+#
+RUN cd /opt \
+    && export CMAKE_URL="http://cmake.org/files/v${CMAKE_SERIES}/cmake-${CMAKE_VERSION}.tar.gz" \
+    && wget --no-check-certificate ${CMAKE_URL} -O - | tar xzf - \
+    && cd cmake-${CMAKE_VERSION} \
+    && export CC=/usr/bin/clang-${CLANG_VERSION} \
+    && export CXX=/usr/bin/clang++-${CLANG_VERSION} \
+    && ./bootstrap && make && make install && cd /opt && rm -rf cmake-${CMAKE_VERSION} 
 
 # ###
-#     git stuff
-RUN git config --global http.sslVerify false 
-
-# ###
-#     GATB-Core compiler scripts
-COPY ./gatb-compile.sh /usr/local/bin
-COPY ./gatb-test.sh /usr/local/bin
+#     GATB-Core management scripts
+#
+COPY *.sh /usr/local/bin/
 
 
