some leon cleaning, and added leon tool inside gatb-core

--- a/gatb-core/tools/CMakeLists.txt
+++ b/gatb-core/tools/CMakeLists.txt
@@ -14,7 +14,7 @@ include_directories (${gatb-core-includes})
 # We add the path for extra libraries
 link_directories (${gatb-core-extra-libraries-path})
 
-list (APPEND PROGRAMS dbgh5 dbginfo)
+list (APPEND PROGRAMS dbgh5 dbginfo leon)
 
 FOREACH (program ${PROGRAMS})
   add_executable(${program} ${program}.cpp)
@@ -44,4 +44,4 @@ ENDFOREACH (program)
 ################################################################################
 #  INSTALLATION 
 ################################################################################
-install (TARGETS dbgh5 dbginfo DESTINATION bin)
+install (TARGETS dbgh5 dbginfo leon DESTINATION bin)
