--- a/gatb-core/src/gatb/template/TemplateSpecialization10.cpp.in
+++ b/gatb-core/src/gatb/template/TemplateSpecialization10.cpp.in
@@ -1,6 +1,7 @@
 #include <gatb/bcalm2/bcalm_algo.cpp>
 #include <gatb/bcalm2/bglue_algo.cpp>
 #include <gatb/bcalm2/ograph.cpp>
+#include <gatb/debruijn/impl/LinkTigs.cpp>
 
 using namespace gatb::core::kmer;
 using namespace gatb::core::kmer::impl;
@@ -27,6 +28,11 @@ template void bglue<${KSIZE}>(Storage* storage,
         );
 
 template class graph3<${KSIZE}>; // graph3<span> switch  
+
+template void link_tigs<${KSIZE}>
+    (std::string unitigs_filename, int kmerSize, int nb_threads, uint64_t &nb_unitigs, bool verbose);
+
+template void link_unitigs_pass<${KSIZE}>(const std::string unitigs_filename, bool verbose, const int pass, const int kmerSize);
 
 
 /********************************************************************************/
