Change way code snippets are compiled to enable smooth Xcode integration. Now, to compile code snippets, use cmake as follows: cmake -DGATB_CORE_INCLUDE_EXAMPLES=True ..

--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -270,8 +270,8 @@ ENDIF()
 #  EXAMPLES GENERATION 
 ################################################################################
 IF (EXISTS "${PROJECT_SOURCE_DIR}/examples")
-    IF (NOT DEFINED GATB_CORE_EXCLUDE_EXAMPLES)
-        ADD_SUBDIRECTORY(examples EXCLUDE_FROM_ALL)
+    IF (GATB_CORE_INCLUDE_EXAMPLES)
+        ADD_SUBDIRECTORY(examples)
     ENDIF()
 ENDIF()
 
@@ -284,10 +284,6 @@ IF (NOT DEFINED GATB_CORE_INSTALL_EXCLUDE)
     INSTALL (FILES ${PROJECT_SOURCE_DIR}/LICENCE              DESTINATION . OPTIONAL)
     INSTALL (FILES ${PROJECT_SOURCE_DIR}/THIRDPARTIES.md      DESTINATION . OPTIONAL)
     INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}/thirdparty/boost DESTINATION ./include)
-ENDIF()
-
-IF (NOT DEFINED GATB_CORE_EXCLUDE_EXAMPLES)
-    INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}/examples DESTINATION . OPTIONAL  FILES_MATCHING PATTERN "*.cpp")
 ENDIF()
 
 ################################################################################
