implemented https://github.com/GATB/bcalm/issues/45

--- a/gatb-core/src/gatb/template/TemplateSpecialization10.cpp.in
+++ b/gatb-core/src/gatb/template/TemplateSpecialization10.cpp.in
@@ -25,6 +25,7 @@ template void bglue<${KSIZE}>(Storage* storage,
         int kmerSize, 
         int nb_glue_partitions, 
         int nb_threads, 
+        bool all_abundance_counts,
         bool verbose
         );
 
