--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
             command: 'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
         - run:
             name: Installing GCC
-            command: 'apt-get update && apt-get install -y build-essential wget'
+            command: 'apt-get update && apt-get install -y build-essential wget zlib1g zlib1g-dev'
         - run:
             name: Install CMAKE
             command: |
