--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ script:
 - cd gatb-core
 - mkdir build
 - cd build
+- make $MAKEFLAGS
 - export CPPUNIT_VERBOSE=TRUE && ./bin/gatb-core-cppunit
 env:
   global:
