--- a/gatb-core/CMakeLists.txt
+++ b/gatb-core/CMakeLists.txt
@@ -112,7 +112,7 @@ if (debug)
     message("-- COMPILATION IN DEBUG MODE")
 else()
     set (LIBRARY_COMPILE_DEFINITIONS  "${LIBRARY_COMPILE_DEFINITIONS} -O3 -DNDEBUG ${LIB_COMPILE_WARNINGS}")
-    set (CMAKE_BUILD_TYPE Release) # Avoids the "RelWithDebInfo" build type of Cmake, which creates problems with "make package" later. It gave that error:
+    #set (CMAKE_BUILD_TYPE Release) # Avoids the "RelWithDebInfo" build type of Cmake, which creates problems with "make package" later. It gave that error:
     #CMake Error at /scratchdir/test-suite-debian7-64bits-gcc-4.7/gatb-core/build/thirdparty/cmake_install.cmake:41 (file):
     #file INSTALL cannot find
     #"/scratchdir/test-suite-debian7-64bits-gcc-4.7/gatb-core/build/include/RelWithDebInfo/hdf5".
