--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 - mkdir build
 - cd build
 - cmake .. && make $MAKEFLAGS 
-- export CPPUNIT_VERBOSE=TRUE && ./bin/Release/gatb-core-cppunit
+- export CPPUNIT_VERBOSE=TRUE && ./bin/gatb-core-cppunit
 env:
   global:
     - MAKEFLAGS="-j 4"
