--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@
 pages:
   image: busybox
   stage: deploy
+  when: delayed
+  start_in: 5 minutes
   script:
     - wget https://ci.inria.fr/gatb-core/view/GATB-CORE-gitlab/job/publish-doc-api-gitlab/lastSuccessfulBuild/artifact/doc.tgz
     - mkdir -p public/doc/api
